Avoid newer String API in player startup